// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Blockquote renders correctly 1`] = `
<jest>
  <figure
    class="bcl-blockquote text-left bg-lighter p-2 px-2-5 border-4 border-secondary border-start"
  >
    <blockquote
      class="blockquote mb-2"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
    <figcaption
      class="blockquote-footer m-0"
    >
      Someone famous in    
      <cite
        title="Source title"
      >
        Source title
      </cite>
    </figcaption>
  </figure>
</jest>
`;

exports[`OE - Blockquote renders correctly with no attribution 1`] = `
<jest>
  <figure
    class="bcl-blockquote text-left bg-lighter p-2 px-2-5 border-4 border-secondary border-start"
  >
    <blockquote
      class="blockquote mb-2"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
  </figure>
</jest>
`;

exports[`OE - Blockquote renders correctly with no cite 1`] = `
<jest>
  <figure
    class="bcl-blockquote text-left bg-lighter p-2 px-2-5 border-4 border-secondary border-start"
  >
    <blockquote
      class="blockquote mb-2"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
    <figcaption
      class="blockquote-footer m-0"
    >
      Someone famous in  
    </figcaption>
  </figure>
</jest>
`;

exports[`OE - Blockquote renders correctly with text aligned center 1`] = `
<jest>
  <figure
    class="bcl-blockquote text-center bg-lighter p-2 px-2-5 border-4 border-secondary border-top"
  >
    <blockquote
      class="blockquote mb-2"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
    <figcaption
      class="blockquote-footer m-0"
    >
      Someone famous in    
      <cite
        title="Source title"
      >
        Source title
      </cite>
    </figcaption>
  </figure>
</jest>
`;
